added an html doctype to partial.html

--- a/partial.html
+++ b/partial.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	<title>Partial Application of function</title>
 	<link href="./css/main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
